# mpir

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.md  README.md  config.json  default_output.py  default_output.tex  foo.mpir  fucda.mpir  output.py  output.tex  python.py  run.py  temp.mpirast  temp_file.mpirast  test.md  test.tex  test.text  test2.md
.github/workflows/: cmake-multi-platform.yml  python-app.yml
Codebank/: tokenizer.c
Docbank/Diagrambank/: .$High Level Overview.drawio.bkp
codebank/: CMakeLists.txt  cfg.lua  context-free-grammar.lua  hash-map.c  symbol-table.c  symbol.c
codebank/buildbank/: BUILD_README.md
codebank/databank/: ascii.txt  test.mpir
codebank/databank/examples/: balance.mpir  password_checker.mpir
codebank/databank/protobuffer_templates/: example.protobuf
codebank/headerbank/mpir_architecture/: mpir_server.h
codebank/headerbank/mpir_ast/: mpir_ast.h  mpir_command_ast.h  mpir_doc_ast.h  mpir_expression_ast.h
codebank/headerbank/mpir_buildmanager/: mpir_buildmanager.h
codebank/headerbank/mpir_lexer/: mpir_lexer.h  mpir_lexer_token_handler.h  mpir_lexer_token_typer.h  mpir_lexer_tokenizer.h  mpir_token.h  mpir_tokenize_function_declaration.h
codebank/headerbank/mpir_lexicalization/: mpir_lexer.h  mpir_lexer_add_token.h  mpir_lexer_token_handler.h  mpir_lexer_tokenizer.h  mpir_lexer_write_file.h  mpir_tokeniser.h  mpir_tokeniser_append.h  mpir_tokeniser_write.h
codebank/headerbank/mpir_lexication/: mpir_lexer.h  mpir_lexer_tokenizer.h
codebank/headerbank/mpir_logging/: mpir_warnings.h
codebank/headerbank/mpir_misc/: mpir_definition_list.h  mpir_help_kernel.h  mpir_linked_list.h  mpir_print_ast.h  mpir_warnings.h
codebank/headerbank/mpir_parser/: mpir_parse.h  mpir_parse_expression.h  mpir_parse_funcdef.h  mpir_parse_function_body.h  mpir_parse_function_call.h  mpir_parse_function_header.h  mpir_parse_let_binding.h  mpir_parse_multiple.h  mpir_parse_set_binding.h  mpir_parse_type_header.h  mpir_parser.h  mpir_parser_utilities.h  mpir_parser_writer.h
codebank/headerbank/mpir_protobuffer/: mpir_protobuffer.h
codebank/headerbank/mpir_symbol_table/: mpir_hashmap.h
codebank/headerbank/mpir_token/: mpir_token.h  mpir_token_create.h  mpir_token_free.h  mpir_token_write.h
codebank/headerbank/mpir_tokeniser/: mpir_lexer.h  mpir_lexer_token_handler.h  mpir_tokeniser.h  mpir_tokeniser_append.h  mpir_tokeniser_parse.h  mpir_tokeniser_write.h
codebank/headerbank/mpir_wjson/: mpir_wjson.h
codebank/idebank/: ide.py  wiki_page.html
codebank/includebank/mpir_logging/: mpir_warnings.h
codebank/includebank/mpir_symbol_table/: mpir_hashmap.h  mpir_symbol.h  mpir_symbol_context.h  mpir_symbol_type.h  mpir_symbol_variable.h
codebank/modulebank/: config.json  default_output.py  mpir_module_desugar_ast.py  mpir_module_python.py  mpir_module_tex.py  mpir_module_typecheck.py  sample.tex  test.py  testj.json
codebank/modulebank/mpir_typechecker/: bound_check.py  core_calculus.py  min_max.py  mpir_module_context.py  mpir_module_python.py  mpir_module_tex.py  mpir_module_typecheck.py  test_core_calculus.py  test_min_max.py  test_typing_context.py  testj.json  typechecker.py  typechecker_old.py  typing_context.py  validate_ast.py
codebank/mpir_logging/: mpir_warnings.c
codebank/mpir_symbol_table/: a.out  mpir_hashmap.c  mpir_hashmap.h  mpir_symbol.c  mpir_symbol.h  mpir_symbol_context.c  mpir_symbol_table.c  mpir_symbol_table.h  mpir_symbol_type.c  mpir_symbol_type.h  mpir_symbol_variable.c  mpir_symbol_variable.h
codebank/other/: tokenizer.c
codebank/sourcebank/: main.c
codebank/sourcebank/mpir_architecture/: mpir_server.c
codebank/sourcebank/mpir_ast/: mpir_ast.c  mpir_command_ast.c
codebank/sourcebank/mpir_buildmanager/: mpir_buildmanager.c
codebank/sourcebank/mpir_lexer/: mpir_lexer.c  mpir_lexer.h  mpir_lexer_token_handler.c  mpir_lexer_token_typer.c  mpir_lexer_tokenizer.c  mpir_token.c  mpir_tokenize_function_declaration.c
codebank/sourcebank/mpir_lexicalization/: mpir_lexer.c  mpir_lexer_add_token.c  mpir_lexer_token_handler.c  mpir_lexer_tokenizer.c  mpir_lexer_write_file.c  mpir_tokeniser.c  mpir_tokeniser_append.c  mpir_tokeniser_write.c
codebank/sourcebank/mpir_logging/: mpir_warnings.c
codebank/sourcebank/mpir_misc/: mpir_definition_list.c  mpir_help_kernel.c  mpir_linked_list.c  mpir_print_ast.c  (+1 more)
codebank/symbol_table/: mpir_symbol.c  mpir_symbol_context.c  mpir_symbol_context.h  mpir_symbol_type.c  mpir_symbol_type.h  mpir_symbol_variable.c  mpir_symbol_variable.h  mpir_warnings.c  mpir_warnings.h  symbol.c
codebank/testbank/: mpir_test_tokenisation.c  mpir_test_tokenisation.h  test_example.c
diagrambank/: .$Format Overview.drawio.bkp  .$High Level Overview.drawio.bkp  .$MpirBasic.drawio.bkp  .$Thiong.drawio.bkp  .$Thiong.drawio.dtmp  .$Tokeniser States.drawio.bkp  .$Tokeniser States.drawio.dtmp  .$mpir_advanced.drawio.bkp  .$mpir_advanced.drawio.dtmp  Compiler Sequencing.drawio  Format Overview.drawio  High Level Overview.drawio  LiterateVsMpir.drawio  MpirBasic.drawio  Thiong.drawio  Tokeniser States.drawio  dependency.drawio  dependency_chaining.drawio  mpir_advanced.drawio
documentbank/: MPIR Project Proposal Gannt Chart.xlsx  MPIR Project Proposal.docx  core_calculus.tex  desugaring.md  tadd_proof.lean  tsub_proof.lean
documentbank/vs-code_settings/: launch.json  tasks.json
other/: a.out  cfg-notes.lua  cfg.lua
src/: ast.rs  calculator1.lalrpop  codegen.rs  main.rs
wikibank/: wiki_doon_notation.md  wiki_notation_doon.md  wiki_notation_funcdef.md  wiki_notation_typedef.md
(+76 files in other folders)
